# IRC

./: .gitignore  CMakeLists.txt
bircd/: Makefile  bircd  bircd.h  main.c
client_src/: Makefile
client_src/includes/: client.h
client_src/srcs/: cmd.c  error.c  event.c  main.c  main_loop.c  msg_format_rfc.c  ring_buffer.c  set_client.c
server_src/: Makefile
server_src/includes/: server.h
server_src/srcs/: cmd.c  cmd_join.c  cmd_leave.c  cmd_list.c  cmd_msg.c  cmd_nick.c  cmd_who.c  cmd_whois.c  config.c  debug.c  error.c  event.c  event_client.c  event_server.c  main.c  main_loop.c  msg_format_rfc.c  print_log_bonus.c  ring_buffer.c  send.c  set_action.c  set_client.c  set_server.c  util.c  util_channel.c
